--- a/src/praxicloud.eventprocessors.hubconsumer.sample/praxicloud.eventprocessors.hubconsumer.sample.csproj
+++ b/src/praxicloud.eventprocessors.hubconsumer.sample/praxicloud.eventprocessors.hubconsumer.sample.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="3.1.10" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.10" />
+    <PackageReference Include="PraxiCloud-Core-Metrics" Version="2.3.0" />
+    <PackageReference Include="PraxiCloud-Core-Metrics-ApplicationInsights" Version="2.3.2" />
     <PackageReference Include="PraxiCloud-Core-Metrics-Prometheus" Version="2.3.2" />
   </ItemGroup>
 
