--- a/src/praxicloud.eventprocessors.hubconsumer.storage/praxicloud.eventprocessors.hubconsumer.storage.csproj
+++ b/src/praxicloud.eventprocessors.hubconsumer.storage/praxicloud.eventprocessors.hubconsumer.storage.csproj
@@ -2,7 +2,7 @@
 
   <Import Project="..\common.props" />
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>PraxiCloud-EventProcessors-HubConsumer-AzureStorage</PackageId>
     <Description>PraxiCloud libraries offer a range of common functions, features and base classes to use when building solutions, increasing the time to delivery. Offers implementations for lease and checkpoint management in Azure Storage.</Description>
@@ -13,7 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.7.0" />
-    <PackageReference Include="PraxiCloud-Core-Metrics" Version="2.3.0" />
+    <PackageReference Include="PraxiCloud-Core-Metrics" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\praxicloud.eventprocessors.hubconsumer\praxicloud.eventprocessors.hubconsumer.csproj" />
