--- a/src/praxicloud.eventprocessors.hubconsumer.sample/praxicloud.eventprocessors.hubconsumer.sample.csproj
+++ b/src/praxicloud.eventprocessors.hubconsumer.sample/praxicloud.eventprocessors.hubconsumer.sample.csproj
@@ -2,16 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <ServerGarbageCollection>true</ServerGarbageCollection>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="3.1.10" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.10" />
-    <PackageReference Include="PraxiCloud-Core-Metrics" Version="2.3.0" />
-    <PackageReference Include="PraxiCloud-Core-Metrics-ApplicationInsights" Version="2.3.2" />
-    <PackageReference Include="PraxiCloud-Core-Metrics-Prometheus" Version="2.3.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    <PackageReference Include="PraxiCloud-Core-Metrics" Version="5.0.0" />
+    <PackageReference Include="PraxiCloud-Core-Metrics-ApplicationInsights" Version="5.0.0" />
+    <PackageReference Include="PraxiCloud-Core-Metrics-Prometheus" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
